test/unittest/error/tst.DTRACEFLT_BADADDR2.r
The arguments are 2 2 4 1 16384
The value of arg4 should be 1
The value of arg5 should be 16384

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #2
